fixed spelling and made .color-box center

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-.color-containter{
+.color-container{
     display: flex;
     justify-content: center;
 }
 
 .color-box{
+    display: flex; 
+    justify-content: center;
     width: 200px; 
     height: 200px;
     background-color: red; 
