--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,14 @@
     width: 200px; 
     height: 200px;
     background-color: red; 
+    border-radius: 10px;
 }
 
 .color-change{
     margin-top: 20px;
+    height: 50px;
+    width: 200px; 
+    border-color: transparent;
+    border-radius: 10px;
+    background-color: rgb(192, 189, 189);
 }
