added body css to center project on page

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body{
+    background-color: rgb(208, 245, 245);
+    margin: 200px;
+}
+
 .color-container{
     display: flex;
     justify-content: center;
