--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,14 @@
-body{
-    background-color: rgb(208, 245, 245);
-    margin: 200px;
+#color-container {
+    text-align: center;
 }
 
-.color-container{
-    display: flex;
-    justify-content: center;
-}
-
-.color-box{
-    display: flex; 
-    justify-content: center;
-    width: 500px; 
+#color-box {
+    width: 200px;
     height: 200px;
-    background-color: red; 
-    border-radius: 10px;
+    background-color: red;
+    margin: 20px auto;
 }
 
-.color-change{
-    margin-top: 20px;
-    height: 50px;
-    width: 200px; 
-    border-color: transparent;
-    border-radius: 10px;
-    background-color: rgb(192, 189, 189);
-}
-
-.color-change:hover{
-    background-color: grey;
+button {
+    font-size: 18px;
 }
